output/rubic_t01_find_validate_repo_manifest/foundry_validation/F-001_Unlimited_gateway_approvals_persist_inde/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x3335A88bb18fD3b6824b59Af62b50CE494143333". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x3335A88bb18fD3b6824b59Af62b50CE494143333". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:15:40:
   |
15 |     address internal constant TARGET = 0x3335a88bb18fd3b6824B59Af62b50ce494143333;
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfeBB0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfeBB0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:26:39:
   |
26 |     address internal constant MATIC = 0x7D1AfA7B718fb893dB30A3aBc0Cfc608AaCfebb0;
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

